--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
       </form>
     </div>
     <p class="para-2">
-      Not have an account? <a href="signup.html">Sign Up Here</a>
+      Don't have an account? <a href="signup.html">Sign Up Here</a>
     </p>
   </body>
 </html>
